main/tests/trybuild/starts_punct.stderr
error: expecting a `let` statement
 --> tests/trybuild/starts_punct.rs:3:11
  |
3 |     json!(+ then more)
  |           ^
